brat/test/golden/error/fanout-too-many-overs.brat
f(Vec(Nat, 3)) -> Nat, Nat
f = { [/\] }
