brat/test/golden/error/fanout-too-many-overs.brat.golden
Error in test/golden/error/fanout-too-many-overs.brat on line 2:
f = { [/\] }
    ^^^^^^^^

  Type error: No unders but overs: (head :: Nat) for [/\]

